--- a/ct_about.html
+++ b/ct_about.html
@@ -25,11 +25,12 @@
     
     <body>
 <header>
-    <h1>About Curbside Thai </h1>
+    <img src="ct_logo2.png" alt="Curbside Thai" />
 </header>
 
 <article>
   <h1> About Us</h1>
+  <img src="ct_photo1.png" alt="" />
  
 <P>Curbside Thai brings the rich flavor of Thailand to 
 North Carolina. Master Chef Sajja Adulet, with over 35 
@@ -51,7 +52,7 @@ on or off the streets of Charlotte.</q></P>
 </article>
 
 <footer>
-    Curbside Thai 411 Belde Drive, Charlotte NC 282011, 780-555-5555 
+    Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 282011 &#8226; 780-555-5555 
 </footer>
 
     </body>
