--- a/ct_catering.html
+++ b/ct_catering.html
@@ -7,8 +7,9 @@
     Tutorial Case
     
     Curbside Thai Catering Page
-    Author: 
-    Date:   
+    Author: tajmann kaur 
+    Date: 2024-09-12
+
 
     Filename: ct_catering.html
    -->
@@ -25,7 +26,7 @@
   </header>
   <article>
      <h1>Catering</h1>
-    
+    <img src="ct_photo2.png" alt="catering-photo"/> 
   </article>
   <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
