--- a/ct_catering.html
+++ b/ct_catering.html
@@ -6,7 +6,7 @@
     Tutorial 1
     Tutorial Case
     
-    Curbside Thai Catering Page
+    General  Curbside Thai Catering Page
     Author: tajmann kaur 
     Date: 2024-09-12
 
@@ -26,7 +26,7 @@
   </header>
   <article>
      <h1>Catering</h1>
-    <img src="ct_photo2.png" alt="catering-photo"/> 
+    <img src="ct_photo2.png" alt=""/> 
     <p>Since 2010 Curbside Thai has provided top-class catering for weddings
 and special events. We cover Charlotte and large regions of North
 Carolina with our mobile food truck, built specially for catering big
