--- a/ct_reviews.html
+++ b/ct_reviews.html
@@ -7,7 +7,7 @@
     Tutorial Case
     
     Curbside Thai Reviews Page
-    Author: tajmann kaur 
+    Author: Tajmann Kaur 
     Date:   2024-09-12
 
 
