--- a/ct_contact.html
+++ b/ct_contact.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Curbside Thai Contact Information
-    Author: 
-    Date:   
+    Author: Tajmann Kaur 
+    Date: 2024-09-16   
 
     Filename: ct_contact.html
    -->
@@ -21,11 +21,24 @@
 
 <body>
   <header class="logo">
+   
      <img src="ct_logo2.png" alt="Curbside Thai" />
-  </header>g5
+  </header>
+
   <article>
      <h1>Contact Us</h1>
-    
+     <p>Contact Curbside Thai for your next event or just to find
+out when our mobile truck will next be in your area.
+Employment opportunities available now!</p>
+<address>
+Curbside Thai<br />
+411 Belde Drive<br />
+Charlotte NC 28201
+</address>
+
+<p>Call:<a href="tel:+17045551151"> (704) 555-1151</a></p>
+<p></p>Email:<a href="mailto:curside.thai@example.com"> curbside.thai@example.com</a></p>
+
   </article>
   <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
