--- a/ct_reviews.html
+++ b/ct_reviews.html
@@ -6,7 +6,7 @@
     Tutorial 1
     Tutorial Case
     
-    Curbside Thai Reviews Page
+    Curbside Thai Reviews Pageg
     Author: Tajmann Kaur 
     Date:   2024-09-12
 
