--- a/ct_catering.html
+++ b/ct_catering.html
@@ -23,6 +23,18 @@
 <body>
   <header class="logo">
      <img src="ct_logo2.png" alt="Curbside Thai" />
+
+     <nav> 
+      <ul>
+         <li><a href="ct_about.html">About</a></li>
+         <li><a href="ct_locations.html">Locations</a></li>
+         <li><a href="ct_menu.html">Menu</a></li>
+         <li><a href="ct_reviews.html">Reviews</a></li>
+         <li><a href="ct_catering.html">Catering</a></li>
+         <li><a href="ct_contact.html">Contact</a></li>
+      </ul>
+   </nav>
+
   </header>
   <article>
      <h1>Catering</h1>
