--- a/ct_contact.html
+++ b/ct_contact.html
@@ -23,6 +23,18 @@
   <header class="logo">
    
      <img src="ct_logo2.png" alt="Curbside Thai" />
+
+     <nav> 
+      <ul>
+         <li><a href="ct_about.html">About</a></li>
+         <li><a href="ct_locations.html">Locations</a></li>
+         <li><a href="ct_menu.html">Menu</a></li>
+         <li><a href="ct_reviews.html">Reviews</a></li>
+         <li><a href="ct_catering.html">Catering</a></li>
+         <li><a href="ct_contact.html">Contact</a></li>
+      </ul>
+   </nav>
+
   </header>
 
   <article>
@@ -37,7 +49,7 @@ Charlotte NC 28201
 </address>
 
 <p>Call:<a href="tel:+17045551151"> (704) 555-1151</a></p>
-<p></p>Email:<a href="mailto:curside.thai@example.com"> curbside.thai@example.com</a></p>
+<p>Email:<a href="mailto:curside.thai@example.com"> curbside.thai@example.com</a></p>
 
   </article>
   <footer>
