--- a/ct_menu.html
+++ b/ct_menu.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Curbside Thai Mobile Menu
-    Author: 
-    Date:   
+    Author: Tajmann Kaur
+    Date:   2024-09-16
 
     Filename: ct_menu.html
    -->
@@ -22,6 +22,18 @@
 <body>
   <header class="logo">
      <img src="ct_logo2.png" alt="Curbside Thai" />
+
+     <nav> 
+      <ul>
+         <li><a href="ct_about.html">About</a></li>
+         <li><a href="ct_locations.html">Locations</a></li>
+         <li><a href="ct_menu.html">Menu</a></li>
+         <li><a href="ct_reviews.html">Reviews</a></li>
+         <li><a href="ct_catering.html">Catering</a></li>
+         <li><a href="ct_contact.html">Contact</a></li>
+      </ul>
+   </nav>
+
   </header>
   <article>
      <h1>Mobile Menu</h1>
